--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@angular/router": "^5.2.0",
     "core-js": "^2.4.1",
     "rxjs": "^5.5.6",
-    "twitter": "^1.7.1",
+    "Twitter": "^1.7.1",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
