--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "postinstall": "ng build --aot -prod"
+    "postinstall": "concurrently \"ng build --aot -prod\" \"node fixAngularCrypto.js\""
   },
   "private": true,
   "dependencies": {
